fix new bulk download role

--- a/entities/cerbos/policies/derived_roles_common.yaml
+++ b/entities/cerbos/policies/derived_roles_common.yaml
@@ -39,5 +39,7 @@ derivedRoles:
       parentRoles: ["user"]
       condition:
         match:
-          - expr: request.resource.attr.owner_user_id == request.principal.attr.user_id
-          - expr: request.resource.attr.collection_id is null
+          all: 
+            of: 
+              - expr: request.resource.attr.owner_user_id == request.principal.attr.user_id
+              - expr: type(request.resource.attr.collection_id) == type(null)
