add permissions to entity for single_user_owner

--- a/entities/cerbos/policies/derived_roles_common.yaml
+++ b/entities/cerbos/policies/derived_roles_common.yaml
@@ -35,7 +35,7 @@ derivedRoles:
             of:
               - expr: request.resource.attr.collection_id in request.principal.attr.viewer_projects
     
-    - name: bulk_download_owner
+    - name: single_user_owner 
       parentRoles: ["user"]
       condition:
         match:
