--- a/entities/cerbos/policies/bulk_download.yaml
+++ b/entities/cerbos/policies/bulk_download.yaml
@@ -11,7 +11,7 @@ resourcePolicy:
     - actions: ['*']
       effect: EFFECT_ALLOW
       derivedRoles:
-        - bulk_download_owner
+        - single_user_owner
   schemas:
     principalSchema:
       ref: cerbos:///principal.json
