--- a/entities/cerbos/policies/file.yaml
+++ b/entities/cerbos/policies/file.yaml
@@ -10,6 +10,11 @@ resourcePolicy:
       effect: EFFECT_ALLOW
       derivedRoles:
         - project_member
+    
+    - actions: ['view']
+      effect: EFFECT_ALLOW
+      derivedRoles:
+        - single_user_owner
 
     - actions: ['download']
       effect: EFFECT_ALLOW
