--- a/workflows/cerbos/policies/workflow_run.yaml
+++ b/workflows/cerbos/policies/workflow_run.yaml
@@ -17,17 +17,14 @@ resourcePolicy:
       effect: EFFECT_ALLOW
       derivedRoles:
         - owner
+        - single_user_owner
 
     - actions: ['create', 'update', 'view']
       effect: EFFECT_ALLOW
       derivedRoles:
         - project_member
-    
-    - actions: ['create', 'update', 'view', 'delete', 'download']
-      effect: EFFECT_ALLOW
-      derivedRoles:
         - single_user_owner
-        
+    
   schemas:
     principalSchema:
       ref: cerbos:///principal.json
