--- a/workflows/cerbos/policies/workflow_run.yaml
+++ b/workflows/cerbos/policies/workflow_run.yaml
@@ -12,16 +12,20 @@ resourcePolicy:
       effect: EFFECT_ALLOW
       derivedRoles:
         - project_viewer
+        - single_user_owner
 
     - actions: ['download', 'delete']
       effect: EFFECT_ALLOW
       derivedRoles:
         - owner
+        - single_user_owner
 
     - actions: ['create', 'update', 'view']
       effect: EFFECT_ALLOW
       derivedRoles:
         - project_member
+        - single_user_owner
+        
   schemas:
     principalSchema:
       ref: cerbos:///principal.json
