shorten service name

--- a/.github/workflows/reusable-deploy.yml
+++ b/.github/workflows/reusable-deploy.yml
@@ -33,9 +33,14 @@ jobs:
       - name: Set stack name
         id: stack_name 
         run: |
+          if [ "${{ inputs.service }}" == "entities" ]; then
+            SERVICE=en 
+          elif [ "${{ inputs.service }}" == "workflows" ]; then
+            SERVICE=wf
+          fi
           if [ "${{ inputs.environment }}" = "dev" ]; then
             # we must limit stackname length due to role name limitations
-            sname=$(echo ${{ inputs.developer_name }} | cut -c1-6)-${{ inputs.service }}
+            sname=$(echo ${{ inputs.developer_name }} | cut -c1-6)-${SERVICE}
             echo "sname=$sname" >> $GITHUB_OUTPUT
           else
             echo "sname=${{ inputs.service }}" >> $GITHUB_OUTPUT
