create dev enviroment fixes (#292)
* create dev enviroment fixes

* comment out block

* add output stackname

* try with workflows
:

* remove sqs check

* revert comment

* update queue name

* shorten service name

* re-add entities

* add service name to workflows dev

--- a/.github/workflows/create-development-environment.yml
+++ b/.github/workflows/create-development-environment.yml
@@ -11,7 +11,6 @@ jobs:
       service: entities
       developer_name: ${{ github.actor }}
     secrets: inherit
-
   run-deploy-workflows-to-dev:
     uses: ./.github/workflows/reusable-deploy.yml
     with:
@@ -19,14 +18,14 @@ jobs:
       service: workflows
       developer_name: ${{ github.actor }}
     secrets: inherit
-
   run-deploy-graphql-fed-to-dev:
-    uses: chanzuckerberg/czid-graphql-federation-server/.github/workflows/reusable-deploy.yml@main
+    uses: chanzuckerberg/czid-graphql-federation-server/.github/workflows/reusable-deploy.yml@rlim/fix-reusable-deploy
+    needs: [run-deploy-workflows-to-dev, run-deploy-entities-to-dev]
     with:
       environment: dev
       api_url: http://localhost:3000
       allowed_cors_origin: http://localhost:3000
-      nextgen_entities_url: http://${github.actor}-entities:8008
-      nextgen_workflows_url: http://${github.actor}-workflows:8042
+      nextgen_entities_url:  http://${{ needs.run-deploy-entities-to-dev.outputs.stack_name }}-entities:8008
+      nextgen_workflows_url: http://${{ needs.run-deploy-workflows-to-dev.outputs.stack_name }}-workflows:8042
       stack_name: ${{ github.actor }}-fed
     secrets: inherit
