--- a/.github/workflows/delete-development-environment.yml
+++ b/.github/workflows/delete-development-environment.yml
@@ -1,8 +1,8 @@
-name: Create Development Environment
+name: Delete Development Environment
 on:
   workflow_dispatch:
 
-run-name: Create development environment for user ${{ github.actor }}
+run-name: Delete development environment for user ${{ github.actor }}
 jobs:
   run-deploy-entities-to-dev:
     uses: ./.github/workflows/reusable-deploy.yml
@@ -20,14 +20,15 @@ jobs:
       developer_name: ${{ github.actor }}
       operation: delete
     secrets: inherit
-  #run-deploy-graphql-fed-to-dev:
-  #  uses: chanzuckerberg/czid-graphql-federation-server/.github/workflows/reusable-deploy.yml@rlim/fix-reusable-deploy
-  #  needs: [run-deploy-workflows-to-dev, run-deploy-entities-to-dev]
-  #  with:
-  #    environment: dev
-  #    api_url: http://localhost:3000
-  #    allowed_cors_origin: http://localhost:3000
-  #    nextgen_entities_url:  http://${{ needs.run-deploy-entities-to-dev.outputs.stack_name }}-entities:8008
-  #    nextgen_workflows_url: http://${{ needs.run-deploy-workflows-to-dev.outputs.stack_name }}-workflows:8042
-  #    stack_name: ${{ github.actor }}-fed
-  #  secrets: inherit
+  run-deploy-graphql-fed-to-dev:
+    uses: chanzuckerberg/czid-graphql-federation-server/.github/workflows/reusable-deploy.yml@rlim/fix-reusable-deploy
+    needs: [run-deploy-workflows-to-dev, run-deploy-entities-to-dev]
+    with:
+      environment: dev
+      api_url: http://localhost:3000
+      allowed_cors_origin: http://localhost:3000
+      nextgen_entities_url:  http://${{ needs.run-deploy-entities-to-dev.outputs.stack_name }}-entities:8008
+      nextgen_workflows_url: http://${{ needs.run-deploy-workflows-to-dev.outputs.stack_name }}-workflows:8042
+      stack_name: ${{ github.actor }}-fed
+      operation: delete
+    secrets: inherit
