chore: remove deprecated tags
https://czi.atlassian.net/browse/CCIE-3911

--- a/.github/workflows/deploy-to-prod.yml
+++ b/.github/workflows/deploy-to-prod.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   run-release:
-    runs-on: [ARM64, self-hosted, Linux]
+    runs-on: [ARM64]
     steps:
       - name: Checkout 
         uses: actions/checkout@v3
