--- a/.github/workflows/entities-push-tests.yml
+++ b/.github/workflows/entities-push-tests.yml
@@ -15,7 +15,7 @@ on:
 
 jobs:
   py-lint:
-    runs-on: [ARM64, self-hosted, Linux]
+    runs-on: ARM64
     steps:
       - uses: actions/checkout@v3
       # Build images and run linters
@@ -28,7 +28,7 @@ jobs:
           make local-build
           make check-lint
   py-test:
-    runs-on: [ARM64, self-hosted, Linux]
+    runs-on: ARM64
     steps:
       - uses: actions/checkout@v3
       # Set up a local dev env and run tests
