--- a/.github/workflows/reusable-deploy.yml
+++ b/.github/workflows/reusable-deploy.yml
@@ -21,7 +21,7 @@ on:
 
 jobs:
   run-deploy:
-    runs-on: [ARM64, self-hosted, Linux]
+    runs-on: ARM64
     environment: ${{ inputs.environment }}
     permissions:
       id-token: write
